[package]
authors = ["Chi Huu Huynh"]
edition = "2021"
name    = "gif-decoder"
version = "2.0.5"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi        = "2"
napi-derive = "2"
byteorder = "=1.5.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
